[project]
name = "plone-entwicklerhandbuch"
version = "5.2.1"
description = "Plone-Entwicklerhandbuch"
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-inline-tabs",
]

dev = [
    "plone-entwicklerhandbuch[docs]",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plone-entwicklerhandbuch"]
